added linearalgebra to dependencies

--- a/Project.toml
+++ b/Project.toml
@@ -12,3 +12,4 @@ test = ["Test"]
 [deps]
 LatPhysBase = "eec5c15a-e8bd-11e8-0d23-6799ca40c963"
 LatPhysReciprocal = "7a511e88-ebe4-11e8-1bac-67d16a536c98"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
