--- a/Project.toml
+++ b/Project.toml
@@ -3,13 +3,14 @@ uuid = "91e24bd6-ff91-11e8-087a-05fe8a0f75ec"
 authors = ["Jan Attig <jattig@thp.Uni-Koeln.DE>"]
 version = "0.1.0"
 
+[deps]
+LatPhysBase = "eec5c15a-e8bd-11e8-0d23-6799ca40c963"
+LatPhysLatticeConstruction = "ec4de012-e8d7-11e8-3fed-dfe576d3bbe4"
+LatPhysReciprocal = "7a511e88-ebe4-11e8-1bac-67d16a536c98"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["Test"]
-
-[deps]
-LatPhysBase = "eec5c15a-e8bd-11e8-0d23-6799ca40c963"
-LatPhysReciprocal = "7a511e88-ebe4-11e8-1bac-67d16a536c98"
-LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
