--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,12 @@ LatPhysLatticeConstruction = "ec4de012-e8d7-11e8-3fed-dfe576d3bbe4"
 LatPhysReciprocal = "7a511e88-ebe4-11e8-1bac-67d16a536c98"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 
+[compat]
+LatPhysBase = "0.1"
+LatPhysLatticeConstruction = "0.1"
+LatPhysReciprocal = "0.1"
+julia = "1"
+
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
